# rowlens

./: .gitignore  README.md  pyproject.toml
src/rowlens/: __init__.py  __main__.py  cli.py  render.py  search.py
tests/: test_cli.py  test_large_file.py  test_module_entrypoint.py  test_search.py
